--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
 
   <div  class='img'>
     <div  class='pic'>
-     <img src="media/{{home.picture}}">
+     <img src="media/{{home.picture}}"	alt='pic'>
 
     </div>
 
