--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
   <div  class='img'>
     <div  class='pic'>
  
-	    <img src="{% static'{{home.picture}}' %}"	alt='pic'>
+	    <img src="static/{{home.picture}}"	alt='pic'>
     </div>
 
     </div>
