--- a/static/index.css
+++ b/static/index.css
@@ -24,8 +24,8 @@ body{
 }
 
 .intro .img .pic  img{
-    height: 50%;
-    width: 50%;
+    height: 200px;
+    width: 200x;
     border-radius: 50%;
     margin-left: 50px;
     object-fit: cover;
