--- a/static/index.css
+++ b/static/index.css
@@ -263,6 +263,11 @@ header  button{
         margin-left: 0;
 
     }
+    
+    .intro  .img   pic{
+        margin-left: 0;
+
+    }
     .styled-table{
         width: 50%;
     }
