--- a/static/index.css
+++ b/static/index.css
@@ -265,7 +265,7 @@ header  button{
     }
     
     .intro  .img   pic{
-        margin-left: 0;
+        margin-right: 10;
 
     }
     .styled-table{
