--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
   <div  class='img'>
     <div  class='pic'>
  
-	    <img src="static/download.jpg" alt='pic'>
+	    <img src="static/bar.jpg" alt='pic'>
     </div>
 
     </div>
