--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
     <div  class='social-media'>
     <li class="nav-item"><a href="{{sololearn.link}}"	class="nav__link">Sololearn<span class="humberger"><i class='fab  fa-solo-learn'></i> </span></a></li>
 			<li class="nav-item"><a href="{{facebook.link}}"	class="nav__link"><span class="humberger"><i class='fab fa-github'></i> </span></a></li>
-			<li class="nav-item"><a href="https://www.freecodecamp.org/fcc682b3559-3173-4177-8646-de83bccf88bd"	class="nav__link"><span class="humberger"><i class='fab fa-free-code-camp'></i> </span></a></li>
+			<li class="nav-item"><a href="https://www.freecodecamp.org/manfred"	class="nav__link"><span class="humberger"><i class='fab fa-free-code-camp'></i> </span></a></li>
 			<li class="nav-item"><a href=""	class="nav__link"><span class="humberger"><i class='fab  fa-linkedin'></i> </span></a></li>
 
     </div>
